[tool.poetry]
name = "sales-assistant-agent"
version = "0.1.0"
description = "Sales Forecast Assistant Agent using LangGraph"
authors = ["Data/ML Platform Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langgraph = ">=1.0.10"
langchain = ">=1.3.9"
langchain-core = ">=0.3.85"
langchain-openai = ">=1.1.14"
fastapi = "*"
uvicorn = "*"
google-cloud-bigquery = "*"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
langsmith = ">=0.8.18"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "*"

pytest-mock = "^3.14.0"
moto = "^5.0.0"
pytest-cov = "^5.0.0"
mypy = "^2.1.0"
types-google-cloud-ndb = "^2.4.0.20260518"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"





[tool.mypy]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
incremental = false

# This block forces Mypy to treat anything coming from google as untyped, 
# preventing the internal parser from looking too deep and crashing.
[[tool.mypy.overrides]]
module = [
    "google.*",
    "google.cloud.*"
]
ignore_missing_imports = true
follow_imports = "skip"
